# SoundEtherPi

./: .gitignore  CMakeLists.txt  EtherBerry.cpp  EtherBerry.h  LICENSE  SoundEtherPi.cpp  SoundEtherPiConfig.h.in  soundMixer.cpp  soundMixer.hpp  soundPlayer.cpp  soundPlayer.hpp
bcm2835-1.50/: Makefile  config.status
bcm2835-1.50/doc/: Makefile
bcm2835-1.50/src/: Makefile
